# RADS-reference-implementation

./: LICENSE  README.md  pyproject.toml  requirements.txt
configs/: paper.yaml
src/rads/: __init__.py  ablation.py  cli.py  component_ablation.py  config.py  cross_asset.py  data.py  embeddings.py  gan.py  metrics.py  model.py  pipeline.py  rads.py  temporal.py
