[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rads-stock"
version = "1.0.0"
description = "Reference implementation of the Relational Adversarial Deviation Score framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "joblib>=1.3",
  "numpy>=1.26,<3",
  "pandas>=2.1",
  "pyyaml>=6.0",
  "scikit-learn>=1.4",
  "xgboost>=2.0",
]

[project.optional-dependencies]
deep = [
  "tensorflow>=2.16",
  "torch>=2.2",
  "transformers>=4.40",
]
excel = ["openpyxl>=3.1"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
rads-run = "rads.cli:main"
rads-ablation = "rads.ablation:main"
rads-cross-asset = "rads.cross_asset:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
